# solc

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_STYLE.md  Changelog.md  README.md  ReleaseChecklist.md  ReviewChecklist.md  SECURITY.md
libhypc/: CMakeLists.txt  libhypc.cpp  libhypc.h
test/: .solhint.json  CMakeLists.txt  Common.cpp  Common.h  CommonSyntaxTest.cpp  CommonSyntaxTest.h  EVMHost.cpp  EVMHost.h  ExecutionFramework.cpp  ExecutionFramework.h  FilesystemUtils.cpp  FilesystemUtils.h  InteractiveTests.h  Metadata.cpp  Metadata.h  TestCase.cpp  TestCase.h  TestCaseReader.cpp  TestCaseReader.h  ZVMHost.cpp  ZVMHost.h  buglistTests.js  cmdlineTests.sh  docsCodeStyle.sh  external_tests.py  hyptest.cpp  localeTest.sh  lsp.py  soltest.cpp  stopAfterParseTests.sh
test/benchmarks/: chains.hyp  run.sh
test/cmdlineTests/asm_json/: output
test/cmdlineTests/asm_json_import_all_valid_flags/: output
test/cmdlineTests/asm_json_import_prevrandao/: output
test/cmdlineTests/asm_json_no_pretty_print/: output
test/cmdlineTests/ast_compact_json_no_pretty_json/: output
test/cmdlineTests/ast_compact_json_with_base_path/: input.hyp  output
test/cmdlineTests/ast_ir/: output
test/cmdlineTests/ast_json_import_wrong_evmVersion/: err_old  input.hyp
test/cmdlineTests/ast_json_import_wrong_zvmVersion/: input.hyp
test/cmdlineTests/combined_json_stop_after_parsing/: output
test/cmdlineTests/combined_json_with_base_path/: output
test/cmdlineTests/debug_info_in_yul_and_evm_asm_print_all/: output
test/cmdlineTests/debug_info_in_yul_and_evm_asm_print_location_only/: output
test/cmdlineTests/debug_info_in_yul_and_evm_asm_print_none/: output
test/cmdlineTests/debug_info_in_yul_and_zvm_asm_print_all/: output
test/cmdlineTests/debug_info_in_yul_and_zvm_asm_print_location_only/: output
test/cmdlineTests/debug_info_in_yul_and_zvm_asm_print_none/: output
test/cmdlineTests/debug_info_in_yul_snippet_escaping/: input.hyp  output
test/cmdlineTests/dup_opt_peephole/: output
test/cmdlineTests/evm_version_shanghai/: err
test/cmdlineTests/evmasm_prevrandao/: output
test/cmdlineTests/exp_base_literal/: output
test/cmdlineTests/linker_mode_invalid_option_no_optimize_yul/: args
test/cmdlineTests/linker_mode_invalid_option_optimize/: args
test/contracts/: AuctionRegistrar.cpp  ContractInterface.h  Wallet.cpp
test/evmc/: evmc.h  evmc.hpp  hex.hpp  mocked_host.hpp
test/externalTests/: README.md  bleeps.sh  brink.sh  chainlink.sh  colony.sh  elementfi.sh  ens.sh  euler.sh  gnosis.sh  gp2.sh  perpetual-pools.sh  pool-together.sh  prb-math.py  trident.sh  uniswap.sh  yield-liquidator.sh  zeppelin.sh
test/formal/: README.md
test/hypc/: CommandLineInterface.cpp  CommandLineInterfaceAllowPaths.cpp  CommandLineParser.cpp  Common.cpp  Common.h
test/libevmasm/: Assembler.cpp
test/libhyperion/: ABIDecoderTests.cpp  ABIEncoderTests.cpp  ABIJsonTest.cpp  ABIJsonTest.h  ABITestsCommon.h  ASTJSONTest.cpp  ASTJSONTest.h  ASTPropertyTest.cpp  ASTPropertyTest.h  AnalysisFramework.cpp  AnalysisFramework.h  Assembly.cpp  ErrorCheck.cpp  ErrorCheck.h  GasCosts.cpp  GasMeter.cpp  GasTest.cpp  GasTest.h  HyperionNameAndTypeResolution.cpp  Imports.cpp  InlineAssembly.cpp  LibHypc.cpp  LibSolc.cpp  MemoryGuardTest.cpp  MemoryGuardTest.h  Metadata.cpp  NatspecJSONTest.cpp  NatspecJSONTest.h  SMTCheckerTest.cpp  SMTCheckerTest.h  SemVerMatcher.cpp  SemanticTest.cpp  SemanticTest.h  SolidityCompiler.cpp  SolidityEndToEndTest.cpp  SolidityExecutionFramework.cpp  SolidityExecutionFramework.h  SolidityExpressionCompiler.cpp  SolidityNameAndTypeResolution.cpp  SolidityOptimizer.cpp  (+6 more)
test/libhyputil/: Checksum.cpp  CommonData.cpp  CommonIO.cpp  FixedHash.cpp  FunctionSelector.cpp  IpfsHash.cpp  IterateReplacing.cpp  JSON.cpp  Keccak256.cpp  LEB128.cpp  LazyInit.cpp  StringUtils.cpp  SwarmHash.cpp  TemporaryDirectoryTest.cpp  UTF8.cpp  Whiskers.cpp
test/liblangutil/: CharStream.cpp  Scanner.cpp  SourceLocation.cpp
test/libsolidity/: ABIEncoderTests.cpp  ASTJSONTest.cpp  ASTPropertyTest.cpp  GasCosts.cpp  GasMeter.cpp  Imports.cpp  InlineAssembly.cpp  LibHypc.cpp  LibSolc.cpp  Metadata.cpp  SemanticTest.cpp  SemanticTest.h  SolidityEndToEndTest.cpp  SolidityNameAndTypeResolution.cpp  StandardCompiler.cpp  ViewPureChecker.cpp
test/libsolutil/: Checksum.cpp  CommonData.cpp  CommonIO.cpp  StringUtils.cpp  TemporaryDirectoryTest.cpp
test/libyul/: Common.cpp  Common.h  CompilabilityChecker.cpp  ControlFlowGraphTest.cpp  ControlFlowGraphTest.h  ControlFlowSideEffectsTest.cpp  ControlFlowSideEffectsTest.h  EVMCodeTransformTest.cpp  FunctionSideEffects.cpp  FunctionSideEffects.h  Inliner.cpp  KnowledgeBaseTest.cpp  Metrics.cpp  ObjectCompilerTest.cpp  ObjectCompilerTest.h  ObjectParser.cpp  Parser.cpp  StackLayoutGeneratorTest.cpp  StackLayoutGeneratorTest.h  StackShufflingTest.cpp  StackShufflingTest.h  SyntaxTest.cpp  SyntaxTest.h  YulInterpreterTest.cpp  YulInterpreterTest.h  YulOptimizerTest.cpp  YulOptimizerTest.h  YulOptimizerTestCommon.cpp  YulOptimizerTestCommon.h  ZVMCodeTransformTest.cpp  ZVMCodeTransformTest.h
test/libzvmasm/: Assembler.cpp  Optimiser.cpp
test/scripts/: test_bytecodecompare_prepare_report.py  test_externalTests_benchmark_downloader.py  test_externalTests_parse_eth_gas_report.py  test_isolate_tests.py  unittest_helpers.py
test/solc/: CommandLineInterface.cpp  CommandLineInterfaceAllowPaths.cpp  CommandLineParser.cpp
test/tools/: CMakeLists.txt  IhypTestOptions.cpp  IhypTestOptions.h  IsolTestOptions.cpp  IsolTestOptions.h  afl_fuzzer.cpp  fuzzer_common.cpp  fuzzer_common.h  ihyptest.cpp  isoltest.cpp  yulopti.cpp  yulrun.cpp
test/yulPhaser/: AlgorithmRunner.cpp  Chromosome.cpp  Common.cpp  FitnessMetrics.cpp  GeneticAlgorithms.cpp  Mutations.cpp  PairSelections.cpp  Phaser.cpp  Population.cpp  Program.cpp  ProgramCache.cpp  Selections.cpp  SimulationRNG.cpp  TestHelpers.cpp  TestHelpers.h  TestHelpersTest.cpp
test/zvmc/: CMakeLists.txt  README.md  filter_iterator.hpp  helpers.h  hex.hpp  loader.c  loader.h  mocked_host.hpp  utils.h  zvmc.h  zvmc.hpp
(+1397 files in other folders)
